# assetto_corsa_gym

./: .gitignore  LOCAL_AUTOMATION.md  config.yml  curate_top_laps.py  live_experiment_sweep.py  live_train_watch.ps1  offline_build_segment_dataset.py  offline_pretrain.py  offline_train_unified_backbone.py  plot_live_run.py  pyproject.toml  requirements.txt  smoke_random.py  train.py  train_for_duration.py
algorithm/discor/discor/: agent.py  network.py  replay_buffer.py
algorithm/discor/discor/algorithm/: __init__.py  discor.py  sac.py  shared_backbone_sac.py
assetto_corsa_gym/AssettoCorsaEnv/: ac_client.py  ac_env.py  vjoy.py
assetto_corsa_gym/AssettoCorsaPlugin/plugins/sensors_par/: car_control.py  config.py  sensors_par.py
assetto_corsa_gym/AssettoCorsaPlugin/windows-libs/: WASD.ini
coach/: __init__.py  api.py  service.py
dashboard/: __init__.py  app.py
docs/: QWEN_SAC_TRAINING_GUIDE.md  UNIFIED_QWEN_SAC.md
planner/: __init__.py  hindsight_labeler.py  schemas.py  segment_dataset.py  unified_backbone.py
qwen_runtime/: README.md  pyproject.toml  qwen_loader.py  qwen_sidecar.py
